W06 Team project changes
